--- a/aship/Makefile
+++ b/aship/Makefile
@@ -7,17 +7,17 @@ aship: aship.o
 aship.o: aship.c
 	$(CC) -c $(FLAGS) aship.c -o aship.o
 
-noprof: aship.c
+noprof:
 	$(CC) -c aship.c -o aship.o
 	$(CC) aship.o -o aship
 
 run:
-	aship ../data/datain.txt ../data/dataout.txt
+	-../aship/aship ../data/datain.txt ../data/dataout.txt
 
-prof: gmon.out
+prof: run
 	gprof aship > aship.out
 
-image: text2im.m
+image:
 	octave --persist ../Matlab/text2im.m
 
 clean:
